# gerenciador-academico

./: database.db  pyproject.toml  readme.md
src/: main.py
src/models/: aluno.py  disciplina.py  nota.py
src/repositories/: aluno_repository.py  disciplina_repository.py  nota_repository.py
src/services/: aluno_service.py  disciplina_service.py  nota_service.py
src/views/: aluno_view.py  disciplina_view.py  principal.py
