[tool.poetry]
name = "projeto_rad"
version = "0.1.0"
description = ""
authors = ["dionlleno <dionlleno@proton.me>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^2.0.39"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
